# openhue-gui

./: .gitignore  PKGBUILD  README.md  config.py  editor.py  main.py  modes_schema.py  openhue-gui.desktop  popup.py  pyproject.toml  requirements.txt
openhue_gui/: __init__.py  config.py  editor.py  main.py  notify.py  popup.py
